# ouinet

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.android  Dockerfile.android-emu  Dockerfile.build  Dockerfile.windows  LICENSE  README.md  Vagrantfile  Vagrantfile.aws  docker-compose.yml  ouinet.properties.in  ouinet.scm  requirements.txt  test.sh  version.txt
.circleci/: config.yml
.github/workflows/: test.yml
.gitlab-ci/: android.yml  common.yml  linux.yml
.gitlab-ci/jobs/: linux.yml  prepare-builder-image.yml
.gitlab-ci/pipelines/: android-boost-1.79.yml  android.yml  debian-10-boost-1.71.yml  debian-10-boost-1.74.yml  (+12 more)
android/: .gitignore  README.md  build.gradle  settings.gradle
android/ouinet/: Application.mk  CMakeLists.txt  build.gradle
android/ouinet/src/main/: AndroidManifest.xml
android/ouinet/src/main/cpp/: debug.h  native-lib.cpp  std_scoped_redirect.h
android/ouinet/src/main/java/ie/equalit/ouinet/: Config.java  ConnectivityBroadcastReceiver.kt  ConnectivityStateMonitor.kt  Constants.kt  NotificationBroadcastReceiver.kt  NotificationConfig.kt  NotificationListener.kt  Ouinet.java  OuinetBackground.kt  OuinetEndpoint.kt  OuinetNotification.kt  OuinetService.kt
android/ouinet/src/main/res/values/: strings.xml
android/ouinet/src/test/java/ie/equalit/ouinet/: ConfigTest.java
cmake/: BuildVersion.cmake  OuinetDependencies.cmake  measure_time.sh  policy.cmake  toolchain-mingw64.cmake
doc/: android-sdk-versions.md  coding.org  descriptor-example-v0.json  descriptor-example.json  descriptor-schema-v0.json  descriptor-schema.json  http-headers.md  ouinet-network-whitepaper.md  protocol.md
docker/: Dockerfile.android-builder  Dockerfile.debian-12-builder  Dockerfile.linux-builder  Dockerfile.mingw-builder  Dockerfile.windows-builder  linux.sh  util.sh  windows.sh
guix/: README.md  channels.scm  manifest.scm
lib/: asio.cpp  asio_ssl.cpp
repos/: README.md
rust/: CMakeLists.txt  Cargo.toml  build.rs  record_format.md
rust/cxx/: async_callback.h  dns.cpp  dns.h  dns_completer.h  metrics.cpp  metrics.h  record_processor.cpp  record_processor.h
rust/src/: backoff.rs  backoff_watch.rs  bridge.rs  clock.rs  constants.rs  crypto.rs  device_id.rs  dns.rs  ip.rs  lib.rs  logger.rs  metrics.rs  metrics_runner.rs  period.rs  record_id.rs  record_number.rs  record_processor.rs  runtime.rs  store.rs  uuid_rotator.rs
rust/src/collector/: mod.rs
rust/src/metrics/: auxiliary.rs  backoff_watch.rs  bootstrap.rs  bridge.rs  clock.rs  constants.rs  mod.rs  period.rs  record_id.rs  record_processor.rs  request.rs  runner.rs
rust/src/metrics/collector/: mod.rs  request.rs
rust/src/metrics/store/: backoff.rs  device_id.rs  mod.rs  record_id.rs  record_number.rs
rust/src/store/: backoff.rs  device_id.rs  mod.rs  record_id.rs  record_number.rs
scripts/: add-licenses-dir.sh  build-android-check-for-current-sdk-ndk.sh  build-android-sdk-less.sh  build-android.sh  build-darwin.sh  build-fennec.sh  build-firefox-for-android.sh  build-ios.sh  build-macos.sh  build-ouinet-git.sh  build-ouinet-local.sh  build-ouinet.sh  build-windows.sh  create-framework.sh  descriptor-example.json  descriptor-schema.json  emacs-gdb.el  firefox-proxy.sh  git-version-string.sh  gnunet-accept-chat.sh  gnunet-connect-chat.sh  gnunet-env.sh  injector-docker.sh  install-cmake.sh  ouinet-docker.sh  ouinet-wrapper.sh  ping-swarm  run_integration_tests.sh  run_unit_tests.sh  start-gnunet-client-service.sh  start-gnunet-services.sh  vagrant-build-local.sh  vagrant-build-upstream.sh
src/: asio.cpp  asio_ssl.cpp  async_sleep.cpp  async_sleep.h  authenticate.h  bep5_swarms.cpp  bep5_swarms.h  blocker.h  cache_control.cpp  cache_control.h  client.cpp  client.cpp.orig  client.h  client_config.cpp  client_config.h  client_front_end.cpp  client_front_end.h  client_lib.cpp  client_lib.h  client_main.cpp  connect_to_host.cpp  connect_to_host.h  connection_pool.h  constants.h  coroutineset.h  create_udp_multiplexer.h  declspec.h  default_timeout.h  defer.h  dns_resolve.cpp  dns_resolve.h  doh.cpp  doh.h  endpoint.cpp  endpoint.h  error.cpp  error.h  fail.h  fetch_http_page.h  force_exit_on_signal.h  (+56 more)
src/ouiservice/i2p/: CMakeLists.txt  address.cpp  address.h  client.cpp  client.h  connection.h  connectionlist.h  fwd.h  handshake.cpp  handshake.h  i2cp_server.cpp  i2cp_server.h  server.cpp  server.h  service.cpp  service.h  tunnel.cpp  tunnel.h  tunneller_service.cpp  tunneller_service.h
src/ouiservice/i2p/doc/: handshake.md
src/ouiservice/lampshade/: CMakeLists.txt  liblampshade.cpp  liblampshade.h
src/ouiservice/lampshade/lampshade_bindings/: lampshade_bindings.go
test/: CMakeLists.txt  bt-bep44.cpp  bt-bep5.cpp  bt_bep44.cpp  bt_bep5.cpp  connected_pair.h  ouiservice-client.cpp  ouiservice-server.cpp  ouiservice_client.cpp  ouiservice_server.cpp  progress.h  test-bep5.cpp  test-connection-pool.cpp  test-dht.cpp  test-dns.cpp  test-i2p-connect-and-exchange.cpp  test-i2p-connect-with-retry-and-exchage.cpp  test-i2p-restart.cpp  test-i2p-speed.cpp  test-i2p-subsequent-connection-speed.cpp  test-i2p.cpp  test-merkle-tree.cpp  test-metrics.cpp  test-multi-peer-reader.cpp  test-response-reader.cpp  test-response-writer.cpp  test-routing-table.cpp  test-semver.cpp  test-stream-fork.cpp  test-util.cpp  test_atomic_temp.cpp  test_bencoding.cpp  test_bittorrent.cpp  test_blocker.cpp  test_btree.cpp  test_cache_announcer.cpp  test_cache_control.cpp  test_cancel.cpp  test_connection_pool.cpp  test_crypto_stream.cpp  (+28 more)
test/integration_test/: README.md  ceno_mobile_manual_i2p.py  i2p_browser_test.py  itestlib.py  ouinet_process_controler.py  ouinet_process_protocol.py  test_client_injector_running.py  test_fixtures.py  test_http.py  test_http2.py  test_http_server.py  test_utp.py  try_i2p_at_browser.py
test/manual/: browse_scrape.cpp
test/performance_test/: test_cache_announcer.cpp
test/util/: base_fixture.hpp  bittorrent_utils.cpp  i2p_utils.hpp  process.h  test_dir.h
webextension/: README.md  background.js  manifest.json
(+421 files in other folders)
