[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
chrono = "0.4.40"
env_logger = "0.11.6"
cxx = "1.0"
log = "0"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs", "macros"] }
uuid = { version = "1.13.1", features = ["v4", "serde"] }

[dev-dependencies]
tmpdir = "1.0.0"

[build-dependencies]
cxx-build = "1.0"
