[package]
name = "ouinet-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes"] }
chrono = { version = "0.4.41", features = ["now"] }
cxx = "1.0.143"
env_logger = "0.11.6"
log = "0"
pkcs8 = { version = "0.10.2", default-features = false, features = ["pem", "std"] }
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "fs", "macros", "io-util"] }
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
uuid = { version = "1.13.1", features = ["v4", "serde"] }


[dev-dependencies]
aes-gcm = { version = "0.10.3", features = ["alloc"] }
tmpdir = "1.0.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }


[build-dependencies]
cxx-build = "1.0"
